src/objects/loan__Repayment_Schedule__c.object
<CustomObject>
    <description>Amortization schedule is also called as Repayment schedule.</description>
    <fields>
        <fullName>loan__Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Principal Balance</description>
        <inlineHelpText>Principal Balance</inlineHelpText>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Barcode_Subtype__c</fullName>
        <label>Barcode Subtype</label>
        <picklist>
            <controllingField>loan__Barcode_Type__c</controllingField>
            <picklistValues>
                <fullName>128A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>128B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>128C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Barcode_Type__c</fullName>
        <label>Barcode Type</label>
        <picklist>
            <picklistValues>
                <fullName>Code128</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>code39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ean13</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Date_Paid__c</fullName>
        <description>Date paid</description>
        <inlineHelpText>Date paid</inlineHelpText>
        <label>Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Due_Amount__c</fullName>
        <label>Due_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Due_Date__c</fullName>
        <description>Due date</description>
        <inlineHelpText>The date on which the loan payment is due.</inlineHelpText>
        <label>Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Due_Interest_On_Overdue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Due Interest On Overdue Amount</description>
        <inlineHelpText>Due Interest On Overdue Amount</inlineHelpText>
        <label>Due Interest On Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Due_Interest__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Due Interest</description>
        <inlineHelpText>Due Interest</inlineHelpText>
        <label>Due Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Due_Principal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Due Principal</description>
        <inlineHelpText>Due Principal</inlineHelpText>
        <label>Due Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Id__c</fullName>
        <label>Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Installment_Snapshot__c</fullName>
        <label>Installment Snapshot</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Accrued_Not_Due__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Its the interest accrued on a daily basis, but not due until the due date.</description>
        <inlineHelpText>Its the interest accrued on a daily basis, but not due until the due date.</inlineHelpText>
        <label>Interest Accrued Not Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Is_Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a new repayment schedule for this loan account has been generated and this one is archived for reference.</description>
        <inlineHelpText>Indicates if a new repayment schedule for this loan account has been generated and this one is archived for reference.</inlineHelpText>
        <label>Is Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Is_Billed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Billed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Is_Partially_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this scheduled installment is only partially paid.</description>
        <inlineHelpText>Indicates if this scheduled installment is only partially paid.</inlineHelpText>
        <label>Is Partially Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Account__c</fullName>
        <description>Repayment Schedule of which Loan account</description>
        <inlineHelpText>Repayment Schedule of which Loan account</inlineHelpText>
        <label>Loan Account</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipName>Repayment_Schedule</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Paid_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Paid Fees</description>
        <inlineHelpText>Paid Fees</inlineHelpText>
        <label>Paid Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Paid_Interest_On_Overdue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Paid Interest On Overdue Amount</description>
        <inlineHelpText>Paid Interest On Overdue Amount</inlineHelpText>
        <label>Paid Interest On Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Paid_Interest__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Paid Interest</description>
        <inlineHelpText>Paid Interest</inlineHelpText>
        <label>Paid Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Paid_Principal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Paid Principal</description>
        <inlineHelpText>Paid Principal</inlineHelpText>
        <label>Paid Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Paid_Total__c</fullName>
        <formula>loan__Total_Paid_Fees__c +  loan__Paid_Interest__c +  loan__Paid_Principal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paid Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Past_Due_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Past Due Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Total_Due_Fees__c</fullName>
        <inlineHelpText>Sum of all the fees that is due for each installment</inlineHelpText>
        <label>Total Due Fees</label>
        <summarizedField>loan__Due_Fee__c.loan__Due_Fee_Amount__c</summarizedField>
        <summaryForeignKey>loan__Due_Fee__c.loan__Repayment_Schedule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Total_Installment__c</fullName>
        <formula>loan__Due_Principal__c + loan__Due_Interest__c + loan__Total_Due_Fees__c +  loan__Due_Interest_On_Overdue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Installment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Total_Paid_Fees__c</fullName>
        <label>Total Paid Fees</label>
        <summarizedField>loan__Paid_Fee__c.loan__Paid_Fee_Amount__c</summarizedField>
        <summaryForeignKey>loan__Paid_Fee__c.loan__Repayment_Schedule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This represents the amount paid by the borrower towards this repayment schedule.</description>
        <inlineHelpText>This represents the amount paid by the borrower towards this repayment schedule.</inlineHelpText>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Unpaid_Fees__c</fullName>
        <formula>loan__Total_Due_Fees__c - loan__Total_Paid_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unpaid Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Unpaid_Installment__c</fullName>
        <formula>loan__Unpaid_Principal__c + loan__Unpaid_Interest__c + loan__Unpaid_Fees__c + loan__Unpaid_Overdue_Interest__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unpaid Installment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Unpaid_Interest__c</fullName>
        <formula>loan__Due_Interest__c  -  loan__Paid_Interest__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unpaid Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Unpaid_Overdue_Interest__c</fullName>
        <formula>loan__Due_Interest_On_Overdue__c - loan__Paid_Interest_On_Overdue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unpaid Overdue Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Unpaid_Principal__c</fullName>
        <formula>loan__Due_Principal__c - loan__Paid_Principal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unpaid Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Waived_Interest__c</fullName>
        <label>Waived Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__isPaid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the scheduled payment is/was completely paid</description>
        <inlineHelpText>Checked if the scheduled payment is/was completely paid</inlineHelpText>
        <label>Is Paid</label>
        <type>Checkbox</type>
    </fields>
    <label>Amortization Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RSI-{0000000000}</displayFormat>
        <label>Repayment Schedule ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amortization Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>